# mcp-oracle-dba

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_oracle_dba/: __init__.py  config.py  guardrails.py  oracle_client.py  server.py
tests/: test_guardrails.py
