[project]
name = "mcp-oracle-dba"
version = "0.1.0"
description = "MCP server for Oracle Database — read-only, audited, SQL-guarded. Lets Claude Desktop / Cursor / any MCP client query Oracle safely."
readme = "README.md"
authors = [
    { name = "shopsmartai", email = "shopsmartai.app@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "oracledb>=4.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "sqlparse>=0.5.0",
]

[project.scripts]
mcp-oracle-dba = "mcp_oracle_dba.server:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
